--- a/app/sass/innerpages.sass
+++ b/app/sass/innerpages.sass
@@ -101,3 +101,141 @@
           &:hover
             filter: invert(80%)
             transition: all 1s ease
+  .price
+    font-size: 22px
+    color: lighten(gray, 10%)
+    margin-top: 10px
+    margin-bottom: 10px
+    .old
+      display: inline
+      margin-right: 10px
+      text-decoration: line-through
+    &-item
+      position: relative
+      .currency-sign
+        font-size: 10px
+        left: -2px
+      .number
+        font-weight: 100
+  .product-info
+    font-size: 10px
+    letter-spacing: 1px
+    margin-bottom: 2px
+    .type
+      text-transform: uppercase
+      color: #000
+    .description
+      text-transform: capitalize
+  .product-description
+    font-size: 11px
+    margin-top: 15px
+    color: #535751
+    .advantages
+      margin-top: 10px
+      list-style-type: none
+      padding-left: 0
+      li
+        position: relative
+        padding-left: 10px
+        &::before
+          content: '-'
+          position: absolute
+          left: 0
+  .select
+    &-item
+      padding: 0
+      padding-left: 15px
+      .wrapper
+        position: relative
+      input
+        width: 100%
+        padding: 3px 5px
+        font-size: 12px
+        color: #535751
+      .img-arrow
+        right: 7%
+      .arrow-alone
+        top: 35%
+      .top
+        top: 10%
+        transform: rotate(180deg)
+      .bottom
+        top: 60%
+      ul
+        width: 100%
+        padding: 0
+        position: absolute
+        background-color: #fff
+        z-index: 100
+        li
+          list-style-type: none
+          color: #535157
+          font-size: 12px
+          border-bottom: 1px solid gray
+          border-right: 1px solid gray
+          border-left: 1px solid gray
+          width: 85%
+          position: relative
+          a
+            text-align: center
+            color: #535751
+            text-align: center
+            &:hover
+              background-color: $accent
+  .buttons
+    margin-top: 35px
+    text-transform: uppercase
+    font-size: 13px
+    letter-spacing: 0.1em
+    .button-wrapper
+      position: relative
+      .button
+        padding: 12px 40px
+        border: 1px solid black
+        position: relative
+        img
+          position: absolute
+          height: 38%
+          left: 8%
+          top: 13px
+          filter: invert(100%)
+        &:hover
+          background-color: #000
+          color: #fff
+          transition: all 1s ease
+          img
+            transition: all 1s ease
+            filter: invert(0)
+  &-details
+    padding: 0
+    margin-top: 30px
+    ul
+      text-transform: uppercase
+      padding: 0
+      background-color: #f7f7f7
+      display: -webkit-flex
+      display: -ms-flex
+      display: flex
+      list-style-type: none
+      li
+        padding: 9px 0
+        text-align: center
+        width: 28%
+        font-size: 14px
+        cursor: pointer
+      .active
+        background-color: #333333
+        &:hover
+          transition: all 1s ease
+          background-color: darken(#333333, 20%)
+        a
+          font-size: 14px
+          color: #fff !important
+          &:hover
+            color: $accent
+
+    .details-item
+      padding: 0px 15px
+      font-size: 14px
+      .caption
+        font-size: 16px
