--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -12,7 +12,6 @@
 .display
 	visibility: visible
 	opacity: 1
-	top: 0
 	transition: opacity 1s ease
 	height: auto
 .hidden
@@ -25,6 +24,13 @@
 	display: -ms-flex
 	display: flex
 	flex-direction: column
+.currency-sign
+	font-size: 10px
+	position: absolute
+	left: 0
+	top: 1%
+.number
+	margin-left: 8px
 html, body
 	height: 100%
 
@@ -331,11 +337,15 @@ a
 				&-small
 					width: 50%
 					height: 350px
+					.currency-sign
+						right: 16%
 				&-big
 					width: 100%
 					height: 500px
 					.image
 						background-position: 0 0
+					.currency-sign
+						right: 7%
 				&-hover
 					text-align: center
 					padding: 5px 25px
@@ -353,6 +363,12 @@ a
 					line-height: 13px
 					.name
 						text-transform: uppercase
+						.current-price
+							display: block
+							position: relative
+							.currency-sign
+								display: inline
+								top: -1px
 					.description
 						font-family: 'roboto-example', sans-serif
 						color: rgb(142,140,140)
